# ucr_dtw_lab

./: .gitignore  pyproject.toml
data/: wc_day37_1.csv  wc_day38_1.csv  wc_day38_2.csv  wc_day39_1.csv  wc_day39_2.csv  wc_day40_1.csv  wc_day40_2.csv  wc_day41_1.csv  wc_day41_2.csv
notebook/: ucr_keogh_knn_dtw.ipynb  ucr_keogh_knn_ed.ipynb  ucr_keogh_knn_rust_dtw.ipynb  ucr_kim_knn_dtw.ipynb  ucr_worldcap_001.ipynb
notebook/.ipynb_checkpoints/: ucr_keogh_knn_dtw-checkpoint.ipynb  ucr_keogh_knn_rust_dtw-checkpoint.ipynb
wheel/: rust_dtw-0.1.14-cp39-cp39-manylinux_2_24_x86_64.whl
