[tool.poetry]
name = "ucr-dtw-lab"
version = "0.1.0"
description = ""
authors = ["nnao45 <n4sekai5y@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
ipykernel = "^6.29.1"
bash-kernel = "^0.9.3"
matplotlib = "^3.8.2"
rust-dtw = "^0.1.14"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
